edited a couple of views

--- a/FrontEndFeature/Views/MyForm/Index.cshtml
+++ b/FrontEndFeature/Views/MyForm/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <form asp-action="index" method="post">
-        <label asp-for="FormString">Any string (keep it clean):</label>
+        <label asp-for="FormString">A string:</label>
         <input asp-for="FormString" />
         <button type="submit">Submit</button>
     </form>
