--- a/FrontEndFeature/Views/MyIndex/Index.cshtml
+++ b/FrontEndFeature/Views/MyIndex/Index.cshtml
@@ -11,6 +11,7 @@
 </head>
 <body>
     <p>Click <a asp-controller="MyForm" asp-action="Index">here</a> to go to the form.</p>
-    <p>Click <a asp-controller="Home" asp-action="Index">here</a> to go crying back home like a baby.</p>
+    <p>Click <a asp-controller="Home" asp-action="Index">here</a> to go home.</p>
+    <week-day></week-day>
 </body>
 </html>
