--- a/FrontEndFeature/Views/_ViewImports.cshtml
+++ b/FrontEndFeature/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FrontEndFeature
 @using FrontEndFeature.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, FrontEndFeature
